--- a/vagina/Systemet.csproj
+++ b/vagina/Systemet.csproj
@@ -193,7 +193,9 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Account\Index.cshtml" />
+    <Content Include="Views\Konto\Register.cshtml" />
+    <Content Include="Views\Konto\Login.cshtml" />
+    <Content Include="Views\Konto\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
