--- a/vagina/Systemet.csproj
+++ b/vagina/Systemet.csproj
@@ -196,6 +196,7 @@
     <Content Include="Views\Konto\Register.cshtml" />
     <Content Include="Views\Konto\Login.cshtml" />
     <Content Include="Views\Konto\Index.cshtml" />
+    <Content Include="Views\Konto\inloggad.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
