--- a/vagina/Systemet.csproj
+++ b/vagina/Systemet.csproj
@@ -205,6 +205,7 @@
     <Content Include="Views\Konto\inloggad.cshtml" />
     <Content Include="Views\Shared\Login.cshtml" />
     <Content Include="Views\Shared\loggaIn.cshtml" />
+    <Content Include="Views\Konto\Redigera.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
