--- a/vagina/Systemet.csproj
+++ b/vagina/Systemet.csproj
@@ -156,12 +156,20 @@
     <Compile Include="Migrations\201704211023401_InitialCreate.Designer.cs">
       <DependentUpon>201704211023401_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704241426357_ta bort valideringar.cs" />
+    <Compile Include="Migrations\201704241426357_ta bort valideringar.Designer.cs">
+      <DependentUpon>201704241426357_ta bort valideringar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\OurDBContext.cs" />
     <Compile Include="Models\AnvändarKonton.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Systemet.Models.OurDBContext.mdf" />
+    <Content Include="App_Data\Systemet.Models.OurDBContext_log.ldf">
+      <DependentUpon>Systemet.Models.OurDBContext.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="DOCS\förklaringar.txt" />
@@ -207,9 +215,7 @@
     <Content Include="Views\Shared\loggaIn.cshtml" />
     <Content Include="Views\Konto\Redigera.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
   </ItemGroup>
@@ -228,6 +234,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201704211023401_InitialCreate.resx">
       <DependentUpon>201704211023401_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704241426357_ta bort valideringar.resx">
+      <DependentUpon>201704241426357_ta bort valideringar.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
