KONTOCONTROLLER.CS: - lagt tillbaka validering
ANVÄNDARKONTON.CS:
-lagt tillbaka valideringar

ÖVRIGT:
- uppdaterat databasen efter migration av grupp + valideringar

--- a/vagina/Systemet.csproj
+++ b/vagina/Systemet.csproj
@@ -164,6 +164,10 @@
     <Compile Include="Migrations\201704241644577_lagt till grupper.Designer.cs">
       <DependentUpon>201704241644577_lagt till grupper.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704241839468_+valideringar.cs" />
+    <Compile Include="Migrations\201704241839468_+valideringar.Designer.cs">
+      <DependentUpon>201704241839468_+valideringar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Grupp.cs" />
     <Compile Include="Models\OurDBContext.cs" />
@@ -245,6 +249,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704241644577_lagt till grupper.resx">
       <DependentUpon>201704241644577_lagt till grupper.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704241839468_+valideringar.resx">
+      <DependentUpon>201704241839468_+valideringar.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
