lag till vy för att lista grupper som användare är med i. gjort om på inloggad partial-viewen så att länkar till "mina grupper", och "skapa grupp" finns bredvid namnet och logga ut-knappen

--- a/vagina/Systemet.csproj
+++ b/vagina/Systemet.csproj
@@ -236,6 +236,7 @@
     <Content Include="Views\Grupp\Details.cshtml" />
     <Content Include="Views\Grupp\Edit.cshtml" />
     <Content Include="Views\Grupp\Index.cshtml" />
+    <Content Include="Views\Grupp\MinaGrupper.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
