--- a/vagina/Systemet.csproj
+++ b/vagina/Systemet.csproj
@@ -177,6 +177,10 @@
     <Compile Include="Migrations\201704270958129_grupp scaffolding.Designer.cs">
       <DependentUpon>201704270958129_grupp scaffolding.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705021617391_added ledareID for grupp.cs" />
+    <Compile Include="Migrations\201705021617391_added ledareID for grupp.Designer.cs">
+      <DependentUpon>201705021617391_added ledareID for grupp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Grupp.cs" />
     <Compile Include="Models\OurDBContext.cs" />
@@ -236,7 +240,6 @@
     <Content Include="Views\Grupp\Details.cshtml" />
     <Content Include="Views\Grupp\Edit.cshtml" />
     <Content Include="Views\Grupp\Index.cshtml" />
-    <Content Include="Views\Grupp\MinaGrupper.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -272,6 +275,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704270958129_grupp scaffolding.resx">
       <DependentUpon>201704270958129_grupp scaffolding.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705021617391_added ledareID for grupp.resx">
+      <DependentUpon>201705021617391_added ledareID for grupp.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
