funkar inte riktigt med att lägga till i grupper

--- a/vagina/Systemet.csproj
+++ b/vagina/Systemet.csproj
@@ -241,6 +241,7 @@
     <Content Include="Views\Grupp\Edit.cshtml" />
     <Content Include="Views\Grupp\Index.cshtml" />
     <Content Include="Views\Grupp\gåmedigrupp.cshtml" />
+    <Content Include="Views\Grupp\bekräftagrupp.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
