--- a/vagina/Systemet.csproj
+++ b/vagina/Systemet.csproj
@@ -186,42 +186,27 @@
     <Compile Include="Migrations\201705091551574_many-to-many.Designer.cs">
       <DependentUpon>201705091551574_many-to-many.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201705091557431_many to many 2.cs" />
-    <Compile Include="Migrations\201705091557431_many to many 2.Designer.cs">
-      <DependentUpon>201705091557431_many to many 2.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\201705091619125_many to many for fuck sake.cs" />
     <Compile Include="Migrations\201705091619125_many to many for fuck sake.Designer.cs">
       <DependentUpon>201705091619125_many to many for fuck sake.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201705091643118_nu borde det ha kommit en many to many.cs" />
-    <Compile Include="Migrations\201705091643118_nu borde det ha kommit en many to many.Designer.cs">
-      <DependentUpon>201705091643118_nu borde det ha kommit en many to many.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201705091656548_nurå many to many.cs" />
-    <Compile Include="Migrations\201705091656548_nurå many to many.Designer.cs">
-      <DependentUpon>201705091656548_nurå many to many.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201705091658591_100.cs" />
-    <Compile Include="Migrations\201705091658591_100.Designer.cs">
-      <DependentUpon>201705091658591_100.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\201705111047107_evenemang påbörjat.cs" />
     <Compile Include="Migrations\201705111047107_evenemang påbörjat.Designer.cs">
       <DependentUpon>201705111047107_evenemang påbörjat.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705111516016_uppgifter.cs" />
+    <Compile Include="Migrations\201705111516016_uppgifter.Designer.cs">
+      <DependentUpon>201705111516016_uppgifter.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Evenemang.cs" />
     <Compile Include="Models\Grupp.cs" />
     <Compile Include="Models\OurDBContext.cs" />
     <Compile Include="Models\AnvändarKonton.cs" />
+    <Compile Include="Models\Uppgifter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\Systemet.Models.OurDBContext.mdf" />
-    <Content Include="App_Data\Systemet.Models.OurDBContext_log.ldf">
-      <DependentUpon>Systemet.Models.OurDBContext.mdf</DependentUpon>
-    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="DOCS\förklaringar.txt" />
@@ -280,7 +265,9 @@
     <Content Include="Views\Evenemangs\Index.cshtml" />
     <Content Include="Views\Grupp\gruppsida.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
   </ItemGroup>
@@ -321,23 +308,14 @@
     <EmbeddedResource Include="Migrations\201705091551574_many-to-many.resx">
       <DependentUpon>201705091551574_many-to-many.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201705091557431_many to many 2.resx">
-      <DependentUpon>201705091557431_many to many 2.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201705091619125_many to many for fuck sake.resx">
       <DependentUpon>201705091619125_many to many for fuck sake.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201705091643118_nu borde det ha kommit en many to many.resx">
-      <DependentUpon>201705091643118_nu borde det ha kommit en many to many.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201705091656548_nurå many to many.resx">
-      <DependentUpon>201705091656548_nurå many to many.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201705091658591_100.resx">
-      <DependentUpon>201705091658591_100.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201705111047107_evenemang påbörjat.resx">
       <DependentUpon>201705111047107_evenemang påbörjat.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705111516016_uppgifter.resx">
+      <DependentUpon>201705111516016_uppgifter.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
