--- a/vagina/Systemet.csproj
+++ b/vagina/Systemet.csproj
@@ -217,6 +217,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Systemet.Models.OurDBContext.mdf" />
+    <Content Include="App_Data\Systemet.Models.OurDBContext_log.ldf">
+      <DependentUpon>Systemet.Models.OurDBContext.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="DOCS\förklaringar.txt" />
@@ -280,9 +284,7 @@
     <Content Include="Views\Uppgifters\Edit.cshtml" />
     <Content Include="Views\Uppgifters\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
   </ItemGroup>
