--- a/vagina/Systemet.csproj
+++ b/vagina/Systemet.csproj
@@ -216,6 +216,10 @@
     <Compile Include="Migrations\201705172048412_tagit bort starttid, och ändrat dag till tidpunkt.Designer.cs">
       <DependentUpon>201705172048412_tagit bort starttid, och ändrat dag till tidpunkt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705181548045_lagt till plats vid evenmang.cs" />
+    <Compile Include="Migrations\201705181548045_lagt till plats vid evenmang.Designer.cs">
+      <DependentUpon>201705181548045_lagt till plats vid evenmang.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Evenemang.cs" />
     <Compile Include="Models\EvenemangsKommentarer.cs" />
@@ -503,6 +507,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201705172048412_tagit bort starttid, och ändrat dag till tidpunkt.resx">
       <DependentUpon>201705172048412_tagit bort starttid, och ändrat dag till tidpunkt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705181548045_lagt till plats vid evenmang.resx">
+      <DependentUpon>201705181548045_lagt till plats vid evenmang.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
