i princip klar med event-kommentarerna! nu måste de bara visas på evenemangssidan på ett enkelt sätt. misstänker att det behöver göras i databasen.

--- a/vagina/Systemet.csproj
+++ b/vagina/Systemet.csproj
@@ -454,6 +454,7 @@
     <Content Include="Views\EvenemangsKommentarers\Details.cshtml" />
     <Content Include="Views\EvenemangsKommentarers\Edit.cshtml" />
     <Content Include="Views\EvenemangsKommentarers\Index.cshtml" />
+    <Content Include="Views\EvenemangsKommentarers\komments.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
