fixat buggar i grupp-kontrollerna, lagt till ett välkomstmeddelande när man skapat en användare. gjort en primitiv funktion för att räkna upp användare i gruppsidan.

--- a/Systemet/Systemet.csproj
+++ b/Systemet/Systemet.csproj
@@ -234,10 +234,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\Systemet.Models.OurDBContext.mdf" />
-    <Content Include="App_Data\Systemet.Models.OurDBContext_log.ldf">
-      <DependentUpon>Systemet.Models.OurDBContext.mdf</DependentUpon>
-    </Content>
     <Content Include="Content\agenda.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -461,7 +457,9 @@
     <Content Include="Views\Uppgifter\Index.cshtml" />
     <Content Include="Views\Uppgifter\UppgiftsSida.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
