--- a/Systemet/Systemet.csproj
+++ b/Systemet/Systemet.csproj
@@ -256,6 +256,7 @@
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\jquery.datetimepicker.css" />
     <Content Include="Content\jquery.timepicker.css" />
+    <Content Include="Content\Sensify.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
