--- a/Systemet/Systemet.csproj
+++ b/Systemet/Systemet.csproj
@@ -253,6 +253,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\agenda.css" />
+    <Content Include="Content\awesomplete.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -402,6 +403,7 @@
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\javakod.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.js" />
